# source-code-agent

./: .env.example  .gitignore  README.md  README2.md  docker-compose.minio.yml  final_experiment_report.md  lab1_basic_and_testing.md  pyproject.toml  report.md  架构优化建议.md  架构改动文档.md  继承与委派优化扫描报告.md
app/core/: config.py  minio_client.py
app/domain/: session_context.py  session_memory.py
app/providers/: anthropic_provider.py  base.py  custom_provider.py  google_provider.py  lab2_echo_provider.py  lab2_mock_provider.py  ollama_provider.py  openai_provider.py
app/schemas/: model.py
app/services/: chat_orchestrator.py  document_context_service.py  retrieval_strategies.py  strategy_base.py
app/utils/: agent.py  config.py  graph.py  model.py  security.py  web_search.py
example_use/: README.md  index.html  minimal_case.py
problem/: api_inventory.md  fix_summary.md  issue_index.md  test_report.md
problem/evidence/: ISSUE-001-verify.json  ISSUE-002-verify.json  ISSUE-003-verify.json  ISSUE-004-verify.json  ISSUE-005-verify.json  ISSUE-006-verify.json  ISSUE-007-verify.json  ISSUE-008-verify.json  delete-api-agents-agent-id-api-keys-key-id.json  delete-api-agents-agent-id-share-tokens-token-id.json  delete-api-agents-agent-id.json  delete-api-datasources-datasource-id.json  delete-api-datasources-queries-query-id.json  delete-api-files-file-id.json  delete-api-graphs-graph-id-files-file-id.json  delete-api-graphs-graph-id-neo4j-subgraph.json  delete-api-graphs-graph-id.json  delete-api-knowledge-knowledge-id-files-file-id.json  delete-api-knowledge-knowledge-id.json  delete-api-mcp-services-service-id.json  delete-api-models-model-id.json  delete-api-user-user-id.json  delete-api-users-user-id.json  fix_verification_summary.json  get-api-agent-types.json  get-api-agents-agent-id-api-keys.json  get-api-agents-agent-id-logs.json  get-api-agents-agent-id-share-chat-share-id.json  get-api-agents-agent-id-share-tokens.json  get-api-agents-agent-id.json  get-api-agents-share-token.json  (+165 more)
report/: lab1_final_experiment_report.md  lab2_explainer.md  lab2_final_experiment_report.md  lab2_oop_and_adt.md  从零开始启动（含MinIO）教学文档.md
testapi/: README.md  index.html  main.js  styles.css
(+43 files in other folders)
