[project]
name = "source-code-agent"
version = "0.1.0"
description = "CogmAIt backend API"
authors = [
    {name = "XuQizhe1021"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "pydantic (>=2.10,<2.11)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "starlette (>=1.0.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "python-jose[cryptography] (==3.3.0)",
    "passlib[bcrypt] (==1.7.4)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "cachetools (>=7.0.5,<8.0.0)",
    "anthropic (>=0.86.0,<0.87.0)",
    "aiohttp (>=3.13.4,<4.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "neo4j (>=5.17,<6.0)",
    "minio (>=7.2.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "aiomysql (>=0.3.2,<0.4.0)",
    "tavily-python (>=0.7.23,<0.8.0)",
    "mysql-connector-python (>=9.6.0,<10.0.0)",
    "google-genai (>=1.69.0,<2.0.0)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "modelscope (>=1.35.3,<2.0.0)",
    "magic-pdf (>=1.3.12,<2.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "sentence-transformers (>=5.3.0,<6.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "langchain (>=0.1.0)",
    "langchain-community (>=0.0.13)",
    "langchain-openai (>=0.0.5)",
    "langchain-text-splitters (>=0.0.1)",
    "pymilvus (>=2.6.11,<3.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "pandas (>=2.3.3,<3)",
    "openpyxl (>=3.1.5,<4)",
    "python-docx (>=1.2.0,<2)",
    "pypdf (>=5.6.0)",
    "neo4j-graphrag (==1.3.0)",
    "fastmcp (>=0.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
